src/objects/FieloELR__CourseStatus__c.object
<CustomObject>
    <fields>
        <fullName>CourseName__c</fullName>
        <formula>FieloELR__Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloELR__ApprovedModules__c</fullName>
        <label>Approved Modules</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloELR__Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>FieloELR__Course__c</referenceTo>
        <relationshipLabel>Courses Status</relationshipLabel>
        <relationshipName>CoursesStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloELR__Key__c</fullName>
        <label>Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloELR__Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Courses Status</relationshipLabel>
        <relationshipName>CoursesStatus</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloELR__Progress__c</fullName>
        <formula>FieloELR__ApprovedModules__c / FieloELR__Course__r.FieloELR__ActiveModules__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Course Status</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Course Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloELR__ApprovedModulesCanNotBeNull</fullName>
        <active>true</active>
        <description>The Approved Modules field cannot be null.</description>
        <errorConditionFormula>ISBLANK(FieloELR__ApprovedModules__c)</errorConditionFormula>
        <errorMessage>The Approved Modules cannot be null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloELR__CourseStatusMustBeActive</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(FieloELR__Course__r.FieloELR__Status__c,&quot;Active&quot;))</errorConditionFormula>
        <errorDisplayField>FieloELR__Course__c</errorDisplayField>
        <errorMessage>Course Status must be related to a Course with the Status Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloELR__Course_cannot_change</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( FieloELR__Course__c )</errorConditionFormula>
        <errorMessage>Course cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloELR__MemberCannotChange</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( FieloELR__Member__c )</errorConditionFormula>
        <errorMessage>The member cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloELR__MemberProgram</fullName>
        <active>true</active>
        <description>Validate that member&apos;s program is the same as Courses&apos;s program</description>
        <errorConditionFormula>FieloELR__Member__r.FieloPLT__Program__c !=  FieloELR__Course__r.FieloELR__Program__c</errorConditionFormula>
        <errorMessage>The member should belong to the Course&apos;s program.</errorMessage>
    </validationRules>
</CustomObject>